<resources>
    <string name="app_name">Dungeons and Dragons Companion App</string>
    <string name="welcome_to_dungeons_and_dragons">Welcome To Dungeons and Dragons</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="player">Player</string>
    <string name="dungeon_master">Dungeon Master</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="minus">—</string>
    <string name="plus">+</string>

    <string-array name="monsterfilter_spinner">
        <item>Name</item>
        <item>Challenge Rating</item>
        <item>Type</item>
    </string-array>

    <string-array name="spellsort_spinner">
        <item>Name</item>
        <item>Level</item>
    </string-array>

    <string name="beast">beast</string>
    <string name="submit">Submit</string>
    <string name="name_ph">Character Name</string>
    <string name="class_ph">Class</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>