<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".DiceActivity">


    <ImageButton
        android:id="@+id/buttonD4"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/d4"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_d4" />

    <ImageButton
        android:id="@+id/buttonD6"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/d6"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_d6" />

    <ImageButton
        android:id="@+id/buttonD8"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/d8"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_d8" />

    <ImageButton
        android:id="@+id/buttonD10"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:background="@color/colorAccent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/d10"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/ic_d10" />

    <ImageButton
        android:id="@+id/buttonD12"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/d12"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/ic_d12" />

    <ImageButton
        android:id="@+id/buttonD20"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/d20"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/ic_d20" />

    <TextView
        android:id="@+id/tvD4"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d4"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonD10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvD10"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d10"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvD12"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d12"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvD20"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d20"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD20"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvD6"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d6"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonD12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvD8"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/d8"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonD20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bDAmountMinus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/bModAmountMinus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bModAmountPlus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/bDAmountPlus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bModAmountMinus"
        app:layout_constraintStart_toEndOf="@+id/bDAmountMinus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/bModAmountPlus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/tvDAmountText"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="# of Dice (1d)"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bDAmountPlus"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@+id/bDAmountMinus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/tvModAmount"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Modifier (0)"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bModAmountPlus"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/bModAmountMinus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</android.support.constraint.ConstraintLayout>